--- a/Apply.html
+++ b/Apply.html
@@ -24,6 +24,11 @@ chennai" />
 <script type="text/javascript" src="j/ppmn.js"></script>
 <script type="text/javascript" src="j/nbw-parallax.js"></script>
 <script type="text/javascript" src="j/jquery.inview.js"></script>
+ <script type="text/javascript">
+ var RecaptchaOptions = {
+    theme : 'clean'
+	
+ };</script>
 <style type="text/css">
 
 
